fix z-index of sticky / nav

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ footer {
 
 .sticky-outer-wrapper {
   position: relative;
-  z-index: 11;
+  z-index: 2;
 }
 
 .Pyro {
