--- a/src/components/controls/CardSearch.scss
+++ b/src/components/controls/CardSearch.scss
@@ -92,3 +92,9 @@
     height: 29vh;
   }
 }
+
+@media (max-width: 516px) {
+  .card-searchbar {
+    padding: 0 4rem;
+  }
+}
