--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,7 +6,7 @@
   height: 4rem;
   background: #2a2c3a;
   border-bottom: 2px solid rgba(255, 255, 255, 0.4);
-  z-index: 10;
+  z-index: 1;
 
   &.invis {
     background: none;
@@ -35,6 +35,7 @@
     line-height: 3.5rem;
     display: flex;
     color: rgba(255, 255, 255, 0.6);
+    z-index: 12;
 
     .nav-tab {
       text-align: center;
